# actix-embeded-frontend-demo

./: .gitmodules  Cargo.toml  build.rs
frontend/: package.json
src/: frontend.rs  main.rs
