[package]
name = "actix-embedded-frontend-demo"
version = "0.1.0"
authors = ["reifujimura <reifujimura@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
zip = "0.5"
mime = "0.3"
mime_guess = "2.0"